hard-gists/d710f2751428975448a4/run.log
=== Docker Run Log for d710f2751428975448a4 ===
Started at: Mi 29. Okt 20:28:01 CET 2025

[2025-10-29 20:28:01] START: Running container for d710f2751428975448a4
[2025-10-29 20:28:02] SUCCESS: Container 3aa24b58e4ccc1b70318271c7f87e1df26814f8e96f4de0adfcdf510748b7cbc started for d710f2751428975448a4
=== Container logs for d710f2751428975448a4 ===
  File "/snippet.py", line 45
    print imgcompare("/Users/michael/Pictures/355.jpg","/Users/michael/Pictures/356.jpg")
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d710f2751428975448a4 ===
[2025-10-29 20:28:04] INFO: Container 3aa24b58e4ccc1b70318271c7f87e1df26814f8e96f4de0adfcdf510748b7cbc has stopped
